--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <div class="menu-toggle">☰</div>
         <nav>
             <ul>
-                <li><a href="src/pages/home.html" class="nav-link active">Home</a></li>
-                <li><a href="src/pages/projects.html" class="nav-link">Projects</a></li>
-                <li><a href="src/pages/honors.html" class="nav-link">Honors</a></li>
-                <li><a href="src/pages/cv.html" class="nav-link">CV</a></li>
+                <li><a href="home" class="nav-link active">Home</a></li>
+                <li><a href="projects" class="nav-link">Projects</a></li>
+                <li><a href="honors" class="nav-link">Honors</a></li>
+                <li><a href="cv" class="nav-link">CV</a></li>
             </ul>
         </nav>
     </header>
