--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="menu-toggle">☰</div>
         <nav>
             <ul>
-                <li><a href="/home" class="nav-link active">Home</a></li>
+                <li><a href="/" class="nav-link active">Home</a></li>
                 <li><a href="/projects" class="nav-link">Projects</a></li>
                 <li><a href="/honors" class="nav-link">Honors</a></li>
                 <li><a href="/cv" class="nav-link">CV</a></li>
