--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chia-Yang Tsai</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="src/css/global.css">
     <link rel="stylesheet" href="src/css/home.css">
     <link rel="stylesheet" href="src/css/honors.css">
@@ -13,17 +14,24 @@
     <script src="src/main.js" defer></script>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
+        <div class="container">
+            <a class="navbar-brand" href="#"><span>C</span>hia-Yang Tsai</a>
+            <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle active" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="oi oi-menu"></span> Menu
+            </button>
+            <div class="navbar-collapse collapse" id="ftco-nav">
+                <ul class="navbar-nav nav ml-auto">
+                    <li class="nav-item"><a href="#/home" class="nav-link active"><span>Home</span></a></li>
+                    <li class="nav-item"><a href="#/projects" class="nav-link"><span>Projects</span></a></li>
+                    <li class="nav-item"><a href="#/honors" class="nav-link"><span>Honors</span></a></li>
+                    <li class="nav-item"><a href="#/cv" class="nav-link"><span>CV</span></a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <header style="background-image: url('src/assets/image/Index_background.jpg'); background-position: center 55%;">
         <h1>Chia-Yang Tsai</h1>
-        <div class="menu-toggle">☰</div>
-        <nav>
-            <ul>
-                <li><a href="#/home" class="nav-link active">Home</a></li>
-                <li><a href="#/projects" class="nav-link">Projects</a></li>
-                <li><a href="#/honors" class="nav-link">Honors</a></li>
-                <li><a href="#/cv" class="nav-link">CV</a></li>
-            </ul>
-        </nav>
     </header>
     <main id="main-content">
         <!-- This is where the content of each page will be injected -->
@@ -39,5 +47,14 @@
             <a href="mailto:r11921a03@ntu.edu.tw"><i class="fas fa-envelope"></i> Email</a>
         </div>
     </footer>
+    
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+              
 </body>
 </html>
