--- a/src/pages/honors.html
+++ b/src/pages/honors.html
@@ -10,7 +10,7 @@
     </div>
     <div class="honor-item">
         <div class="year">2023</div>
-        <div class="description"><strong>3rd Place Award</strong> / TSMC Internship Final Competition (DTP/RD, 70+ Competitors)</div>
+        <div class="description"><strong>3rd Place Award</strong> / TSMC Internship Final Competition (DTP/R&D, 70+ Competitors)</div>
     </div>
     <div class="honor-item">
         <div class="year">2020</div>
